# app-obsidian-abstractor

./: .gitignore  CLAUDE.md  README.md  README_ja.md  pyproject.toml  requirements.txt  run.bat  run.sh  watch_log.txt
.claude/: settings.local.json
config/: config.yaml.example  test-sync.yaml
config/prompts/: academic_abstract.txt  academic_abstract_en.txt  academic_abstract_ja.txt  academic_abstract_markdown_ja.txt
debug_output/: gemini_markdown_20250719_162759.md  gemini_markdown_20250719_163946.md  gemini_markdown_20250719_164501.md  gemini_markdown_20250719_164638.md  gemini_markdown_20250719_182642.md  gemini_markdown_20250719_183820.md  gemini_markdown_20250719_183832.md  gemini_markdown_20250719_183837.md  gemini_markdown_20250719_183845.md  gemini_markdown_20250719_183853.md
docs/: CONTRIBUTING.md  architecture.md  cli-reference.md  configuration.md  features.md  index.md  installation.md  paperpile-sync.md  todo.md  troubleshooting.md  usage.md
src/: __main__.py  config_loader.py  main.py  note_formatter.py  paper_abstractor.py  paperpile_sync.py  pdf_extractor.py  pdf_filter.py  pdf_monitor.py
src/utils/: __init__.py  note_utils.py  path_resolver.py
test_output/: 2014_Jarmer1_pone.0107721_1..8.md  2018_Weisberg_Cognitive_Maps-_Some.md  2019_Fernández-Berrocal,_Reward_emotion_influence.md  2020_Gauthier_What_We_Could.md  2020_Moore_Mind_Brain_Short-Term.md  2025_Marcke_Context-dependent_role.md
test_output_improved/: 2019_Fernández-Berrocal,_Reward_emotion_influence.md
test_output_inline/: 2019_Fernández-Berrocal,_Reward_emotion_influence.md
test_output_new/: 2019_Fernández-Berrocal,_Reward_emotion_influence.md  2020_Gauthier_What_We_Could.md  2020_Moore_Mind_Brain_Short-Term.md
test_output_visual/: 2019_Fernández-Berrocal,_Reward_emotion_influence.md  2019_Fernández-Berrocal,_Reward_emotion_influence_1.md
tests/: test_path_resolver.py  test_pdf_filter.py
tests/00_inbox/: Template-based_attentional_guidance_and_generic_procedural_learning_in_contextual_guided_visual_sear.md
tools/: install_to_vault.py
